--- a/app/src/main/res/layout/fragment_auto.xml
+++ b/app/src/main/res/layout/fragment_auto.xml
@@ -4,20 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:orientation="vertical"
         android:background="@android:color/black">
-    <RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/black"
-        android:layout_gravity="center_horizontal">
-
-
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,7 +21,8 @@
         android:layout_alignParentTop="false"
         android:layout_marginBottom="40dp"
         android:layout_marginTop="30dp"
-        android:layout_marginLeft="200dp" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="10dp" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -44,65 +36,68 @@
         android:layout_below="@+id/chkAutoDef"
         android:layout_alignLeft="@+id/chkAutoDef"
         android:layout_alignStart="@+id/chkAutoDef"
-        android:layout_marginBottom="40dp" />
+        android:layout_marginBottom="40dp"
+        android:layout_gravity="center_horizontal" />
 
-    <TextView
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Low goal Scored"
+            android:id="@+id/chkAutoLow"
+            android:textColor="#ffffff"
+            android:button="@drawable/box"
+            android:textSize="25sp"
+            android:checked="false"
+            android:paddingLeft="20dp"
+            android:layout_below="@+id/chkAutoHigh"
+            android:layout_alignLeft="@+id/chkAutoHigh"
+            android:layout_alignStart="@+id/chkAutoHigh"
+            android:layout_marginBottom="30dp"
+            android:layout_gravity="center_horizontal" />
+
+        <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Starting Position"
-        android:id="@+id/textView"
+        android:id="@+id/txtStart"
         android:textColor="#ffffff"
         android:textIsSelectable="false"
         android:textSize="35sp"
         android:layout_below="@+id/chkAutoLow"
-        android:layout_alignRight="@+id/chkAutoDef"
-        android:layout_alignEnd="@+id/chkAutoDef"
-        android:layout_marginBottom="40dp" />
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Low goal Scored"
-        android:id="@+id/chkAutoLow"
-        android:textColor="#ffffff"
-        android:button="@drawable/box"
-        android:textSize="25sp"
-        android:checked="false"
-        android:paddingLeft="20dp"
-        android:layout_below="@+id/chkAutoHigh"
-        android:layout_alignLeft="@+id/chkAutoHigh"
-        android:layout_alignStart="@+id/chkAutoHigh"
-        android:layout_marginBottom="30dp" />
+        android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal" />
 
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/spinAuto"
             android:popupBackground="#000"
-            android:layout_below="@+id/textView"
+            android:layout_below="@+id/txtStart"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="20dp"
             android:spinnerMode="dialog"
             />
 
-        <ImageView
-            android:layout_width="800dp"
-            android:layout_height="800dp"
-            android:id="@+id/imageView"
-            android:src="@drawable/def"
-            android:layout_alignTop="@+id/chkRw"
-            android:layout_alignLeft="@+id/chkRw"
-            android:layout_alignStart="@+id/chkRw"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="100dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/txtCross"
+            android:textColor="#ffffff"
+            android:textIsSelectable="false"
+            android:textSize="35sp"
+            android:text="Crossed"
+            android:layout_below="@+id/spinAuto"
+            android:layout_alignRight="@+id/chkLb"
+            android:layout_alignEnd="@+id/chkLb"
+            android:layout_gravity="center_horizontal" />
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Crossed Portcullis"
+            android:text="Portcullis"
             android:id="@+id/chkPort"
             android:textColor="#ffffff"
             android:button="@drawable/box"
@@ -111,12 +106,15 @@
             android:paddingLeft="20dp"
             android:layout_below="@+id/spinAuto"
             android:layout_alignLeft="@+id/chkAutoLow"
-            android:layout_alignStart="@+id/chkAutoLow" />
+            android:layout_alignStart="@+id/chkAutoLow"
+            android:layout_marginTop="60dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginRight="3dp" />
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Crossed Cheval de Frise"
+            android:text="Cheval de Frise"
             android:id="@+id/chkCdf"
             android:textColor="#ffffff"
             android:button="@drawable/box"
@@ -126,12 +124,15 @@
             android:layout_below="@+id/chkPort"
             android:layout_alignLeft="@+id/chkPort"
             android:layout_alignStart="@+id/chkPort"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="3dp" />
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Crossed Ramparts"
+            android:text="Ramparts"
             android:id="@+id/chkRmp"
             android:textColor="#ffffff"
             android:button="@drawable/box"
@@ -141,12 +142,14 @@
             android:layout_below="@+id/chkCdf"
             android:layout_alignLeft="@+id/chkCdf"
             android:layout_alignStart="@+id/chkCdf"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginRight="3dp" />
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Crossed DrawBridge"
+            android:text="DrawBridge"
             android:id="@+id/chkDb"
             android:textColor="#ffffff"
             android:button="@drawable/box"
@@ -156,12 +159,14 @@
             android:layout_below="@+id/chkRmp"
             android:layout_alignLeft="@+id/chkRmp"
             android:layout_alignStart="@+id/chkRmp"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="7dp" />
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Crossed Rough Terrain"
+            android:text="Rough Terrain"
             android:id="@+id/chkRt"
             android:textColor="#ffffff"
             android:button="@drawable/box"
@@ -171,12 +176,14 @@
             android:layout_below="@+id/chkDb"
             android:layout_alignLeft="@+id/chkDb"
             android:layout_alignStart="@+id/chkDb"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="20dp" />
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Crossed Rock Wall"
+            android:text="Rock Wall"
             android:id="@+id/chkRw"
             android:textColor="#ffffff"
             android:button="@drawable/box"
@@ -186,12 +193,14 @@
             android:layout_below="@+id/chkRt"
             android:layout_alignLeft="@+id/chkRt"
             android:layout_alignStart="@+id/chkRt"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginRight="3dp" />
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Crossed Low Bar"
+            android:text="Low Bar"
             android:id="@+id/chkLb"
             android:textColor="#ffffff"
             android:button="@drawable/box"
@@ -201,12 +210,14 @@
             android:layout_below="@+id/chkRw"
             android:layout_alignLeft="@+id/chkRw"
             android:layout_alignStart="@+id/chkRw"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginRight="13dp" />
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Crossed Sally Port"
+            android:text="Sally Port"
             android:id="@+id/chkSp"
             android:textColor="#ffffff"
             android:button="@drawable/box"
@@ -216,12 +227,14 @@
             android:layout_below="@+id/chkLb"
             android:layout_alignLeft="@+id/chkLb"
             android:layout_alignStart="@+id/chkLb"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginRight="5dp" />
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Crossed Moat"
+            android:text="Moat"
             android:id="@+id/chkMt"
             android:textColor="#ffffff"
             android:button="@drawable/box"
@@ -231,10 +244,19 @@
             android:layout_below="@+id/chkSp"
             android:layout_alignLeft="@+id/chkSp"
             android:layout_alignStart="@+id/chkSp"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginRight="28dp" />
 
-
-    </RelativeLayout>
+        <ImageView
+            android:layout_width="800dp"
+            android:layout_height="800dp"
+            android:id="@+id/imageView"
+            android:src="@drawable/def"
+            android:layout_below="@+id/chkMt"
+            android:layout_centerHorizontal="true"
+            android:paddingBottom="20dp"
+            android:layout_marginTop="100dp"
+            android:layout_gravity="center_horizontal" />
     </LinearLayout>
-    </HorizontalScrollView>
 </ScrollView>
