--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -6,4 +6,5 @@
     android:textSize="35sp"
     android:background="@android:color/white"
     android:textColor="#000"
-    android:gravity="center_horizontal"/>
+    android:gravity="center_horizontal"
+    />
